Add form validation schemas and helpers

--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.70.0",
+    "zod": "^4.3.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
