--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.70.0",
+    "react-router-dom": "^6.30.2",
     "zod": "^4.3.5",
     "zustand": "^5.0.9"
   },
