add new things in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ dist
 *.log
 .env
 .env.local
+.env.development
+.env.staging
+.env.production
 .husky/_
 vite.config.js
 vite.config.d.ts
+.vite
+.DS_Store
